dummy_app/echo/echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/strip-path: "true"
    external-dns.alpha.kubernetes.io/hostname: echo.localkong.io
  name: echo
  namespace: offsite
spec:
  ingressClassName: kong
  rules:
  - host: echo.localkong.io
    http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 1027
        # path: /echo
        pathType: ImplementationSpecific
